# ceffyl

./: .gitignore  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
ceffyl/: Ceffyl.py  Sampler.py  bandwidths.py  ceffyl.py  ceffyl_gp.py  chain_compressor.py  chain_utils.py  densities.py  gfl.py  metrics.py  model.py  models.py  sampler.py
ceffyl/bw/: bandwidths.py  cbandwidths.c  cbandwidths.pyx
data/IPTA_DR2/ipta-dr2_fftkde_10k[94]_epa_sj/: README.txt  bandwidths.npy  density.npy  freqs.npy  log.txt  log10rhogrid.npy
data/NG15/fs3A/: log.txt
data/NG15/fs_hdmpdp/: bandwidths.npy  density.npy  log.txt
data/epta_dr2_new_hd/: bandwidths.npy  density.npy  freqs.npy  log.txt  log10rhogrid.npy  log10rholabels.txt
data/ppta_dr3_hd/: bandwidths.npy  density.npy  freqs.npy  log.txt  log10rhogrid.npy  log10rholabels.txt
data/sim0/fs_densities/: bandwidths.npy  freqs.npy  (+3 more)
data/sim51/: injected_values.txt
docs/getting_started/: PTA_freespec_ex1.md  making_density_representations.md
examples/: PTA_freespec_ex1.ipynb  gfl_lite_ex2.ipynb  hellinger_toy_model.ipynb  making_density_representations.ipynb
examples/lamb_2023/: figure_1.ipynb  figure_2.ipynb  figure_3.ipynb  figure_4.ipynb  figure_5.ipynb  figure_6+7.ipynb  figure_8.ipynb  linear_regression_tests.ipynb  profiler.py
scripts/: ceffylgp_general.py  ceffylgp_general.slurm  example_astro_notebook.ipynb
src/ceffyl/: bandwidths.py  ceffyl.py  densities.py  metrics.py  models.py  priors.py  ptadata.py  reweighting_utils.py  sampler.py
(+104 files in other folders)
